[package]
name = "niepce_rust"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
build = "build.rs"

[dependencies]
gettext-rs = "0.3.0"
glib = { version = "^0.9.0" }
gio = "^0.8.0"
gtk-sys = { version = "*", features = ["v3_22"] }
gtk = { version = "^0.8.0", git = "https://github.com/hfiguiere/gtk.git", branch = "0.8.0-p1" }
libc = "0.2.39"
#gphoto = "0.1.1"

npc-fwk = { path = "crates/npc-fwk" }
npc-engine = { path = "crates/npc-engine" }

[build-dependencies]
cbindgen = { version = "=0.8.4" }

[lib]
name = "niepce_rust"
crate-type = ["staticlib"]
