[package]
name = "niepce_rust"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
build = "build.rs"

[dependencies]
once_cell = "^0"
gettext-rs = "0.3.0"
glib = { version = "^0.9.3" }
gio-sys = "*"
gio = "^0.8.1"
cairo-rs = "*"
gdk = "*"
gdk-pixbuf = "*"
gdk-pixbuf-sys = "*"
gtk-sys = { version = "*", features = ["v3_22"] }
gtk = { version = "^0.8.1" }
libc = "0.2.39"
#gphoto = "0.1.1"

npc-fwk = { path = "crates/npc-fwk" }
npc-engine = { path = "crates/npc-engine" }

[build-dependencies]
cbindgen = { version = "0.13.1" }

[lib]
name = "niepce_rust"
crate-type = ["staticlib", "lib"]

[[example]]
name = "widget-test"
