ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = COPYING AUTHORS README

INTLTOOL_FILES = intltool-extract.in \
                 intltool-merge.in \
                 intltool-update.in

DISTCLEANFILES = intltool-extract \
                 intltool-merge \
                 intltool-update \
                 po/.intltool-merge-cache

SUBDIRS = po data src
DIST_SUBDIRS = po art data doc src