[package]
name = "niepce_rust"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
build = "build.rs"
edition = "2018"

[dependencies]
async-channel = "1.6.1"
once_cell = "^1.8.0"
gettext-rs = "0.3.0"
glib = "*"
gio-sys = "*"
gio = "*"
cairo-rs = "*"
gdk = "*"
gdk-pixbuf = "*"
gdk-pixbuf-sys = "*"
gtk-sys = { version = "*", features = ["v3_22"] }
gtk = "*"
libc = "0.2.39"
#gphoto = "0.1.1"

npc-fwk = { path = "../crates/npc-fwk" }
npc-engine = { path = "../crates/npc-engine" }

[build-dependencies]
cbindgen = { version = "0.19.0" }

[lib]
name = "niepce_rust"
crate-type = ["staticlib", "lib"]

[[example]]
name = "widget-test"
