[package]
name = "npc-engine"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
exempi = { version = "2.5.0", git = "https://github.com/hfiguiere/exempi-rs.git", rev="53cfc05" }
glib = "*"
libc = "0.2.39"
rusqlite = { version = "0.14.0", features = ["functions"] }
try_opt = "0.1.1"

npc-fwk = { path = "../npc-fwk" }

[build-dependencies]
bindgen = "0.52"
cbindgen = { version = "=0.8.4" }
pkg-config = "0.3.9"
